# CharMem-LLM

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  log.org  main.py  pyproject.toml  run_tests.py
.github/: copilot_instructions.md
.github/workflows/: test-and-lint.yaml
RAG_testing/: basic_HF_RAG.py  basic_local_RAG.py
app/static/css/: styles.css
app/static/js/: chat.js
app/templates/: index.html
backend/: RAG.py  config.py  utils.py
experiments/: RAG_evaluation.py  basic_HF_RAG.py  basic_local_RAG.py  data_curation.py  minimal_example.py  objective_RAG.py
experiments/first_meet_evaluation_data/: HP_character_analysis.csv  HP_character_analysis_manual.csv
personal_log/: log.md  log.org
src/: basic_RAG.ipynb  basic_RAG.py  basic_RAG_colab.ipynb  main.py
tests/: test_rag.py  test_utils.py  testing_setup.py
