[project]
name = "charmem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.0.11",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.18",
    "llama-cpp-python>=0.3.9",
    "pypdf>=5.5.0",
    "sentence-transformers>=4.1.0",
]
