[project]
name = "CharMem"
version = "0.1.0"
description = "CharMem: AI-Powered Character Memory Assistant"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.0.11",
    "huggingface-hub>=0.32.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.18",
    "pandas>=2.3.0",
    "pypdf>=5.5.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
]

[tool.pytest.ini_options]
addopts = "--cov=backend"
